Better graph displays for sectors

--- a/stats/bilan/_secteurs.qmd
+++ b/stats/bilan/_secteurs.qmd
@@ -135,7 +135,7 @@ def calcul_indicateurs_secteurs(tds, year, suffix=''):
     return summary_by_sub_sector
 
 col_order = ['Nombre de TD', 'Taux des TD pris en compte', 'Montant total des achats',	'Taux achats secteurs',	'Coût denrées/repas (moyenne)',	'Montant des achats Bio', 'Taux des achats Bio', 'Montant des achats EGAlim', 'Taux des achats EGAlim',	'Nombre TD gestion directe', 'Taux TD gestion directe',	'Nombre TD gestion concédée', 'Taux TD gestion concédée',	'Taux cuisine centrale', 'Taux satellite']
-summary = calcul_indicateurs_secteurs(tds, 'Campagne 2022')
+summary_2022 = calcul_indicateurs_secteurs(tds, 'Campagne 2022')
 ```
 
 ## 📷 2022
@@ -143,7 +143,7 @@ summary = calcul_indicateurs_secteurs(tds, 'Campagne 2022')
 # | echo: false
 # | output: asis
 
-utils.display_indicateurs(summary, transpose=False, col_order=col_order)
+utils.display_indicateurs(summary_2022, transpose=False, col_order=col_order)
 ```
 
 ## 📷 2023
@@ -151,8 +151,8 @@ utils.display_indicateurs(summary, transpose=False, col_order=col_order)
 # | echo: false
 # | output: asis
 
-summary = calcul_indicateurs_secteurs(tds, 'Campagne 2023')
-utils.display_indicateurs(summary, transpose=False, col_order=col_order)
+summary_2023 = calcul_indicateurs_secteurs(tds, 'Campagne 2023')
+utils.display_indicateurs(summary_2023, transpose=False, col_order=col_order)
 ```
 
 ```{python}
@@ -161,7 +161,7 @@ utils.display_indicateurs(summary, transpose=False, col_order=col_order)
 
 summary = calcul_indicateurs_secteurs(tds, 'Campagne 2023')
 
-def display_sub_sector(summary, sector, type='photo_2023', col_order=None, file_name=''):
+def display_sub_sector(summary, sector, col_order=None, file_name=''):
     summary_sector = summary[summary.index.isin([sector], level=0)].copy()
     summary_sector = summary_sector.reset_index(0)
     del summary_sector['sector']
@@ -171,7 +171,6 @@ def display_sub_sector(summary, sector, type='photo_2023', col_order=None, file_
     utils.display_indicateurs(summary_sector, transpose=False)
     with pd.ExcelWriter(f'data/{file_name}.xlsx', mode='a', if_sheet_exists='replace') as writer:  
         summary_sector.to_excel(writer, sheet_name=sector)
-    # summary_sector.to_excel(f"data/{type}_{sector}.xlsx")
     
 print('### Enseignement')
 display_sub_sector(summary, 'education', file_name='photo_2023_secteurs', col_order=col_order)
@@ -204,19 +203,65 @@ summary = pd.concat([summary_2022, summary_2023], axis=1)
 # | echo: false
 # | output: asis
 
+def display_sub_sector_iso(summary, sector, col_order=None, file_name=''):
+    summary_sector = summary[summary.index.isin([sector], level=0)].copy()
+    summary_sector = summary_sector.reset_index(0)
+    del summary_sector['sector']
+    summary_sector.index = summary_sector.index.set_names('Sous Secteur')
+    if col_order:
+        summary_sector = summary_sector[col_order]
+    utils.display_indicateurs(summary_sector, transpose=False)
+    with pd.ExcelWriter(f'data/{file_name}.xlsx', mode='a', if_sheet_exists='replace') as writer:
+        for year in utils.CAMPAGNES.keys():
+            summary_sector.filter(like=year, axis=1).to_excel(writer, sheet_name=f'{sector}_{year}')
+
 print('### Enseignement')
-display_sub_sector(summary, 'education', type='comparaison_isoperimetre',file_name='isoperimetre_secteurs')
+display_sub_sector_iso(summary, 'education', file_name='isoperimetre_secteurs')
 
 print('### Médico Social')
-display_sub_sector(summary, 'social', type='comparaison_isoperimetre', file_name='isoperimetre_secteurs')
+display_sub_sector_iso(summary, 'social',  file_name='isoperimetre_secteurs')
 
 print('### Santé')
-display_sub_sector(summary, 'health', type='comparaison_isoperimetre', file_name='isoperimetre_secteurs')
+display_sub_sector_iso(summary, 'health', file_name='isoperimetre_secteurs')
 
 print('### Administration')
-display_sub_sector(summary, 'administration', type='comparaison_isoperimetre', file_name='isoperimetre_secteurs')
+display_sub_sector_iso(summary, 'administration', file_name='isoperimetre_secteurs')
 
 print('### Multi Secteurs')
-display_sub_sector(summary, 'multiple_sectors', type='comparaison_isoperimetre', file_name='isoperimetre_secteurs')
+display_sub_sector_iso(summary, 'multiple_sectors', file_name='isoperimetre_secteurs')
 
+print('### Secteur loisir')
+display_sub_sector_iso(summary, 'leisure', file_name='isoperimetre_secteurs')
+
+print('### Secteur Entreprises')
+display_sub_sector_iso(summary, 'enterprise', file_name='isoperimetre_secteurs')
+
+```
+
+### Comparer la photo 2022 et 2023 en fonction des secteurs
+```{python}
+# | echo: false
+# | output: asis
+
+mapper_trad = {
+    'social': 'Médico-Social',
+    'multiple_sectors': 'Secteurs multiples',
+    'health': 'Santé',
+    'education': 'Éducation',
+    'administration': 'Administration',
+}
+
+summary_2022 = calcul_indicateurs_secteurs(tds, 'Campagne 2022', suffix=' 2022')
+summary_2023 = calcul_indicateurs_secteurs(tds, 'Campagne 2023', suffix=' 2023')
+df = pd.concat([summary_2022, summary_2023], axis=1)
+df = df.reset_index()
+df['sector'] = df['sector'].map(mapper_trad)
+print(df)
+df = df.groupby('sector').sum()[['Nombre de TD 2022', 'Nombre de TD 2023']]
+df['Photo 2022'] = df['Nombre de TD 2022'].apply(lambda x: x/df['Nombre de TD 2022'].sum())
+df['Photo 2023'] = df['Nombre de TD 2023'].apply(lambda x: x/df['Nombre de TD 2023'].sum())
+df = df[df['Photo 2022'] > 0.02]
+utils.display_stacked_bars(
+    df[['Photo 2022', 'Photo 2023']], title="Comparaison des profils des télédéclarants des campagnes 2022 et 2023, sur les secteurs principaux", fmt=utils.taux_formatter, iso=False
+)
 ```
